; ModuleID = '/home/carl/AnghaBench/masscan/src/extr_rawsock.c_rawsock_win_name.c'
source_filename = "/home/carl/AnghaBench/masscan/src/extr_rawsock.c_rawsock_win_name.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @rawsock_win_name(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  %5 = load i8*, i8** %3, align 8
  %6 = call i64 @is_numeric_index(i8* %5)
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %17

8:                                                ; preds = %1
  %9 = load i8*, i8** %3, align 8
  %10 = call i32 @atoi(i8* %9)
  %11 = call i8* @adapter_from_index(i32 %10)
  store i8* %11, i8** %4, align 8
  %12 = load i8*, i8** %4, align 8
  %13 = icmp ne i8* %12, null
  br i1 %13, label %14, label %16

14:                                               ; preds = %8
  %15 = load i8*, i8** %4, align 8
  store i8* %15, i8** %2, align 8
  br label %19

16:                                               ; preds = %8
  br label %17

17:                                               ; preds = %16, %1
  %18 = load i8*, i8** %3, align 8
  store i8* %18, i8** %2, align 8
  br label %19

19:                                               ; preds = %17, %14
  %20 = load i8*, i8** %2, align 8
  ret i8* %20
}

declare dso_local i64 @is_numeric_index(i8*) #1

declare dso_local i8* @adapter_from_index(i32) #1

declare dso_local i32 @atoi(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
